test/Fail/Issue2927.err
Issue2927.agda:9.49-50: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2927.agda:9.49-50
